# scratch-pad

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: byte_buffer_view.hpp
src/: byte_buffer_view.cpp  iter.cpp  policy.cpp  poll.cpp
